--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
 		    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>6.17.0</version>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
